Oxide.Compiler/Parser/OxideParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.9.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:/Users/chand/Projects/Oxide/bootstrap/Oxide.Compiler\Oxide.g4 by ANTLR 4.9.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace Oxide.Compiler.Parser {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.9.2")]
[System.CLSCompliant(false)]
public partial class OxideParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		WS=1, COMMENT=2, LINE_COMMENT=3, PACKAGE=4, IMPORT=5, PUBLIC=6, PRIVATE=7, 
		EXTERN=8, MUT=9, STRUCT=10, ENUM=11, VARIANT=12, IMPL=13, IFACE=14, WHERE=15, 
		FOR=16, VAR=17, FUNC=18, UNSAFE=19, BOX=20, ALIAS=21, REF=22, WEAK=23, 
		DERIVED=24, THIS_FIELD=25, RETURN=26, IF=27, ELSE=28, LBRACK=29, RBRACK=30, 
		LARROW=31, RARROW=32, LBRACE=33, RBRACE=34, COLON=35, DCOLON=36, SEMI=37, 
		ARROW=38, AMP=39, PERIOD=40, COMMA=41, PLUS=42, MINUS=43, EQUAL=44, NOTEQ=45, 
		EQUALTO=46, STAR=47, DIV=48, MOD=49, NOT=50, AS=51, OR_OP=52, AND_OP=53, 
		INC_OR_OP=54, EX_OR_OP=55, LEQ_OP=56, GEQ_OP=57, TRUE=58, FALSE=59, IDENTIFIER=60, 
		INT_NUMBER=61, HEX_NUMBER=62, BINARY_NUMBER=63, CHAR_LITERAL=64, STRING_LITERAL=65;
	public const int
		RULE_compilation_unit = 0, RULE_package = 1, RULE_qualified_name = 2, 
		RULE_qualified_name_part = 3, RULE_top_level = 4, RULE_import_stmt = 5, 
		RULE_struct_def = 6, RULE_generic_def = 7, RULE_field_def = 8, RULE_variant_def = 9, 
		RULE_variant_item_def = 10, RULE_tuple_def = 11, RULE_tuple_item_def = 12, 
		RULE_impl_stmt = 13, RULE_impl_body = 14, RULE_where = 15, RULE_where_clause = 16, 
		RULE_iface_def = 17, RULE_alias_def = 18, RULE_func_def = 19, RULE_parameter = 20, 
		RULE_func_body = 21, RULE_block = 22, RULE_statement = 23, RULE_assign_statement = 24, 
		RULE_assign_target = 25, RULE_expression = 26, RULE_or_expression = 27, 
		RULE_and_expression = 28, RULE_inc_or_expression = 29, RULE_ex_or_expression = 30, 
		RULE_bit_and_expression = 31, RULE_equal_expression = 32, RULE_comparison_expression = 33, 
		RULE_cast_expression = 34, RULE_shift_expression = 35, RULE_add_expression = 36, 
		RULE_multiply_expression = 37, RULE_unary_expression = 38, RULE_base_expression = 39, 
		RULE_block_expression = 40, RULE_if_expression = 41, RULE_arguments = 42, 
		RULE_argument = 43, RULE_label = 44, RULE_struct_initialiser = 45, RULE_field_initialiser = 46, 
		RULE_variable_statement = 47, RULE_name = 48, RULE_type = 49, RULE_type_generic_params = 50, 
		RULE_type_flags = 51, RULE_visibility = 52, RULE_literal = 53, RULE_boolean_literal = 54, 
		RULE_left_shift = 55, RULE_right_shift = 56;
	public static readonly string[] ruleNames = {
		"compilation_unit", "package", "qualified_name", "qualified_name_part", 
		"top_level", "import_stmt", "struct_def", "generic_def", "field_def", 
		"variant_def", "variant_item_def", "tuple_def", "tuple_item_def", "impl_stmt", 
		"impl_body", "where", "where_clause", "iface_def", "alias_def", "func_def", 
		"parameter", "func_body", "block", "statement", "assign_statement", "assign_target", 
		"expression", "or_expression", "and_expression", "inc_or_expression", 
		"ex_or_expression", "bit_and_expression", "equal_expression", "comparison_expression", 
		"cast_expression", "shift_expression", "add_expression", "multiply_expression", 
		"unary_expression", "base_expression", "block_expression", "if_expression", 
		"arguments", "argument", "label", "struct_initialiser", "field_initialiser", 
		"variable_statement", "name", "type", "type_generic_params", "type_flags", 
		"visibility", "literal", "boolean_literal", "left_shift", "right_shift"
	};

	private static readonly string[] _LiteralNames = {
		null, null, null, null, "'package'", "'import'", "'public'", "'private'", 
		"'extern'", "'mut'", "'struct'", "'enum'", "'variant'", "'impl'", "'interface'", 
		"'where'", "'for'", "'var'", "'func'", "'unsafe'", "'box'", "'alias'", 
		"'ref'", "'weak'", "'~'", "'this'", "'return'", "'if'", "'else'", "'('", 
		"')'", "'<'", "'>'", "'{'", "'}'", "':'", "'::'", "';'", "'->'", "'&'", 
		"'.'", "','", "'+'", "'-'", "'='", "'!='", "'=='", "'*'", "'/'", "'%'", 
		"'!'", "'as'", "'||'", "'&&'", "'|'", "'^'", "'<='", "'>='", "'true'", 
		"'false'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "WS", "COMMENT", "LINE_COMMENT", "PACKAGE", "IMPORT", "PUBLIC", 
		"PRIVATE", "EXTERN", "MUT", "STRUCT", "ENUM", "VARIANT", "IMPL", "IFACE", 
		"WHERE", "FOR", "VAR", "FUNC", "UNSAFE", "BOX", "ALIAS", "REF", "WEAK", 
		"DERIVED", "THIS_FIELD", "RETURN", "IF", "ELSE", "LBRACK", "RBRACK", "LARROW", 
		"RARROW", "LBRACE", "RBRACE", "COLON", "DCOLON", "SEMI", "ARROW", "AMP", 
		"PERIOD", "COMMA", "PLUS", "MINUS", "EQUAL", "NOTEQ", "EQUALTO", "STAR", 
		"DIV", "MOD", "NOT", "AS", "OR_OP", "AND_OP", "INC_OR_OP", "EX_OR_OP", 
		"LEQ_OP", "GEQ_OP", "TRUE", "FALSE", "IDENTIFIER", "INT_NUMBER", "HEX_NUMBER", 
		"BINARY_NUMBER", "CHAR_LITERAL", "STRING_LITERAL"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Oxide.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static OxideParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public OxideParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public OxideParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class Compilation_unitContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public PackageContext package() {
			return GetRuleContext<PackageContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(OxideParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Import_stmtContext[] import_stmt() {
			return GetRuleContexts<Import_stmtContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Import_stmtContext import_stmt(int i) {
			return GetRuleContext<Import_stmtContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Top_levelContext[] top_level() {
			return GetRuleContexts<Top_levelContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Top_levelContext top_level(int i) {
			return GetRuleContext<Top_levelContext>(i);
		}
		public Compilation_unitContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_compilation_unit; } }
	}

	[RuleVersion(0)]
	public Compilation_unitContext compilation_unit() {
		Compilation_unitContext _localctx = new Compilation_unitContext(Context, State);
		EnterRule(_localctx, 0, RULE_compilation_unit);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 114;
			package();
			State = 118;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==IMPORT) {
				{
				{
				State = 115;
				import_stmt();
				}
				}
				State = 120;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 124;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PUBLIC) | (1L << PRIVATE) | (1L << EXTERN) | (1L << STRUCT) | (1L << VARIANT) | (1L << IMPL) | (1L << IFACE) | (1L << FUNC) | (1L << ALIAS))) != 0)) {
				{
				{
				State = 121;
				top_level();
				}
				}
				State = 126;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 127;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PackageContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PACKAGE() { return GetToken(OxideParser.PACKAGE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Qualified_nameContext qualified_name() {
			return GetRuleContext<Qualified_nameContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEMI() { return GetToken(OxideParser.SEMI, 0); }
		public PackageContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_package; } }
	}

	[RuleVersion(0)]
	public PackageContext package() {
		PackageContext _localctx = new PackageContext(Context, State);
		EnterRule(_localctx, 2, RULE_package);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 129;
			Match(PACKAGE);
			State = 130;
			qualified_name();
			State = 131;
			Match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Qualified_nameContext : ParserRuleContext {
		public Qualified_nameContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_qualified_name; } }
	 
		public Qualified_nameContext() { }
		public virtual void CopyFrom(Qualified_nameContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class Relative_qualified_nameContext : Qualified_nameContext {
		[System.Diagnostics.DebuggerNonUserCode] public Qualified_name_partContext qualified_name_part() {
			return GetRuleContext<Qualified_name_partContext>(0);
		}
		public Relative_qualified_nameContext(Qualified_nameContext context) { CopyFrom(context); }
	}
	public partial class Absolute_qualified_nameContext : Qualified_nameContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DCOLON() { return GetToken(OxideParser.DCOLON, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Qualified_name_partContext qualified_name_part() {
			return GetRuleContext<Qualified_name_partContext>(0);
		}
		public Absolute_qualified_nameContext(Qualified_nameContext context) { CopyFrom(context); }
	}

	[RuleVersion(0)]
	public Qualified_nameContext qualified_name() {
		Qualified_nameContext _localctx = new Qualified_nameContext(Context, State);
		EnterRule(_localctx, 4, RULE_qualified_name);
		try {
			State = 136;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case IDENTIFIER:
				_localctx = new Relative_qualified_nameContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 133;
				qualified_name_part(0);
				}
				break;
			case DCOLON:
				_localctx = new Absolute_qualified_nameContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 134;
				Match(DCOLON);
				State = 135;
				qualified_name_part(0);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Qualified_name_partContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER() { return GetToken(OxideParser.IDENTIFIER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Qualified_name_partContext qualified_name_part() {
			return GetRuleContext<Qualified_name_partContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DCOLON() { return GetToken(OxideParser.DCOLON, 0); }
		public Qualified_name_partContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_qualified_name_part; } }
	}

	[RuleVersion(0)]
	public Qualified_name_partContext qualified_name_part() {
		return qualified_name_part(0);
	}

	private Qualified_name_partContext qualified_name_part(int _p) {
		ParserRuleContext _parentctx = Context;
		int _parentState = State;
		Qualified_name_partContext _localctx = new Qualified_name_partContext(Context, _parentState);
		Qualified_name_partContext _prevctx = _localctx;
		int _startState = 6;
		EnterRecursionRule(_localctx, 6, RULE_qualified_name_part, _p);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			{
			State = 139;
			Match(IDENTIFIER);
			}
			Context.Stop = TokenStream.LT(-1);
			State = 146;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,3,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( ParseListeners!=null )
						TriggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new Qualified_name_partContext(_parentctx, _parentState);
					PushNewRecursionContext(_localctx, _startState, RULE_qualified_name_part);
					State = 141;
					if (!(Precpred(Context, 1))) throw new FailedPredicateException(this, "Precpred(Context, 1)");
					State = 142;
					Match(DCOLON);
					State = 143;
					Match(IDENTIFIER);
					}
					} 
				}
				State = 148;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,3,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			UnrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public partial class Top_levelContext : ParserRuleContext {
		public Top_levelContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_top_level; } }
	 
		public Top_levelContext() { }
		public virtual void CopyFrom(Top_levelContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class Alias_top_levelContext : Top_levelContext {
		[System.Diagnostics.DebuggerNonUserCode] public Alias_defContext alias_def() {
			return GetRuleContext<Alias_defContext>(0);
		}
		public Alias_top_levelContext(Top_levelContext context) { CopyFrom(context); }
	}
	public partial class Variant_top_levelContext : Top_levelContext {
		[System.Diagnostics.DebuggerNonUserCode] public Variant_defContext variant_def() {
			return GetRuleContext<Variant_defContext>(0);
		}
		public Variant_top_levelContext(Top_levelContext context) { CopyFrom(context); }
	}
	public partial class Impl_top_levelContext : Top_levelContext {
		[System.Diagnostics.DebuggerNonUserCode] public Impl_stmtContext impl_stmt() {
			return GetRuleContext<Impl_stmtContext>(0);
		}
		public Impl_top_levelContext(Top_levelContext context) { CopyFrom(context); }
	}
	public partial class Struct_top_levelContext : Top_levelContext {
		[System.Diagnostics.DebuggerNonUserCode] public Struct_defContext struct_def() {
			return GetRuleContext<Struct_defContext>(0);
		}
		public Struct_top_levelContext(Top_levelContext context) { CopyFrom(context); }
	}
	public partial class Func_top_levelContext : Top_levelContext {
		[System.Diagnostics.DebuggerNonUserCode] public Func_defContext func_def() {
			return GetRuleContext<Func_defContext>(0);
		}
		public Func_top_levelContext(Top_levelContext context) { CopyFrom(context); }
	}
	public partial class Iface_top_levelContext : Top_levelContext {
		[System.Diagnostics.DebuggerNonUserCode] public Iface_defContext iface_def() {
			return GetRuleContext<Iface_defContext>(0);
		}
		public Iface_top_levelContext(Top_levelContext context) { CopyFrom(context); }
	}

	[RuleVersion(0)]
	public Top_levelContext top_level() {
		Top_levelContext _localctx = new Top_levelContext(Context, State);
		EnterRule(_localctx, 8, RULE_top_level);
		try {
			State = 155;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,4,Context) ) {
			case 1:
				_localctx = new Struct_top_levelContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 149;
				struct_def();
				}
				break;
			case 2:
				_localctx = new Variant_top_levelContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 150;
				variant_def();
				}
				break;
			case 3:
				_localctx = new Impl_top_levelContext(_localctx);
				EnterOuterAlt(_localctx, 3);
				{
				State = 151;
				impl_stmt();
				}
				break;
			case 4:
				_localctx = new Func_top_levelContext(_localctx);
				EnterOuterAlt(_localctx, 4);
				{
				State = 152;
				func_def();
				}
				break;
			case 5:
				_localctx = new Iface_top_levelContext(_localctx);
				EnterOuterAlt(_localctx, 5);
				{
				State = 153;
				iface_def();
				}
				break;
			case 6:
				_localctx = new Alias_top_levelContext(_localctx);
				EnterOuterAlt(_localctx, 6);
				{
				State = 154;
				alias_def();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Import_stmtContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IMPORT() { return GetToken(OxideParser.IMPORT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Qualified_nameContext qualified_name() {
			return GetRuleContext<Qualified_nameContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEMI() { return GetToken(OxideParser.SEMI, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode AS() { return GetToken(OxideParser.AS, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public NameContext name() {
			return GetRuleContext<NameContext>(0);
		}
		public Import_stmtContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_import_stmt; } }
	}

	[RuleVersion(0)]
	public Import_stmtContext import_stmt() {
		Import_stmtContext _localctx = new Import_stmtContext(Context, State);
		EnterRule(_localctx, 10, RULE_import_stmt);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 157;
			Match(IMPORT);
			State = 158;
			qualified_name();
			State = 161;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==AS) {
				{
				State = 159;
				Match(AS);
				State = 160;
				name();
				}
			}

			State = 163;
			Match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Struct_defContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRUCT() { return GetToken(OxideParser.STRUCT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public NameContext name() {
			return GetRuleContext<NameContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LBRACE() { return GetToken(OxideParser.LBRACE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RBRACE() { return GetToken(OxideParser.RBRACE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public VisibilityContext visibility() {
			return GetRuleContext<VisibilityContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Generic_defContext generic_def() {
			return GetRuleContext<Generic_defContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Field_defContext[] field_def() {
			return GetRuleContexts<Field_defContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Field_defContext field_def(int i) {
			return GetRuleContext<Field_defContext>(i);
		}
		public Struct_defContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_struct_def; } }
	}

	[RuleVersion(0)]
	public Struct_defContext struct_def() {
		Struct_defContext _localctx = new Struct_defContext(Context, State);
		EnterRule(_localctx, 12, RULE_struct_def);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 166;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==PUBLIC || _la==PRIVATE) {
				{
				State = 165;
				visibility();
				}
			}
